--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@adonisjs/lucid": "^17.1.0",
     "@adonisjs/lucid-slugify": "^2.1.4",
     "@adonisjs/repl": "^3.1.9",
+    "@types/escape-html": "^1.0.1",
     "@types/sharp": "^0.30.0",
+    "escape-html": "^1.0.3",
     "luxon": "^2.3.1",
     "mysql": "^2.18.1",
     "phc-argon2": "^1.1.3",
